@@ -1,36 +1,30 @@
 package Buoi2;
 
 import java.util.LinkedList;
+import java.util.List;
 
 public class Warehouse {
-	private LinkedList<Integer> products = new LinkedList<>();
+	private List<Integer> products = new LinkedList<>();
     private final int MAX_CAPACITY = 5;
 
     public synchronized void produce() {
-        while (products.size() >= MAX_CAPACITY) {
-            try {
-                System.out.println("Kho đầy - ngưng sản xuất");
-                wait();
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
+        if (products.size() >= MAX_CAPACITY) {
+        	System.out.println("Kho đầy - ngưng sản xuất");
         }
-        products.addLast(products.size() + 1);
-        System.out.println("Sản xuất sản phẩm #" + products.size());
-        notifyAll();
+        else {
+        	int product = products.size() + 1;
+        	products.add(product);
+            System.out.println("Sản xuất sản phẩm #" + product);
+        }
     }
 
     public synchronized void consume() {
-        while (products.isEmpty()) {
-            try {
-                System.out.println("Kho hết hàng, tạm dừng tiêu thụ");
-                wait();
-            } catch (InterruptedException e) {
-                e.printStackTrace();
-            }
+        if (products.isEmpty()) {
+        	System.out.println("Kho hết hàng, tạm dừng tiêu thụ");
         }
-        int product = products.removeFirst();
-        System.out.println("Tiêu thụ sản phẩm #" + product);
-        notifyAll();
+        else {
+        	int product = products.remove(0);
+            System.out.println("Tiêu thụ sản phẩm #" + product);
+        }
     }
 }
